# OpenAi-ResponseAPI-Dify-Plugin

./: .env.example  GUIDE.md  README.md  manifest.yaml  pyproject.toml
docs/plans/: 2026-03-16-react-responses-stop-design.md  2026-03-16-react-responses-stop-implementation.md  2026-03-16-structured-output-design.md
models/llm/: llm.py
provider/: sub2api-plugin.py  sub2api-plugin.yaml
scripts/: debug.sh  e2e.sh  package.sh  test.sh
tests/: conftest.py  test_llm_invoke.py  test_plugin_smoke.py  test_provider_schema.py  test_responses_mapper.py  test_responses_parser.py
tests/fixtures/: responses_request_minimal.json  responses_response_minimal.json  responses_stream_minimal.sse
