[project]
name = "openai-responseapi-dify-plugin"
version = "0.0.2"
description = "OpenAi-ResponseAPI-Dify-Plugin"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "dify_plugin>=0.4.0,<0.7.0",
    "pytest>=8.0.0,<9.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "manifest.yaml", "provider", "models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
